examples/errors/duplicate_class_def.ik
type Sized class:
    fn size(Self) Int

type Sized class:
    fn size(Self) Int

fn main():
    print("Hello\n")
